--- a/public/form.html
+++ b/public/form.html
@@ -10,11 +10,13 @@
 
   <div class="form">
     <div class="title">
-      <hr class="line"/>
+      <hr class="line" />
       <h2>Book a room</h2>
     </div>
     <div class="container">
+
       <div class="form_contact">
+          <h3>Contact us</h3>
         <form id="contact-form" class="form" action="#" method="POST" role="form">
           <div class="form-group">
             <label class="form-label" for="name">Name</label>
@@ -36,54 +38,56 @@
             <label class="form-label" for="name-event">Name of event</label>
             <input type="text" class="form-control" id="name-event" name="name-event" placeholder="Name of event" tabindex="5" required>
           </div>
-        <div class="number">
-          <div class="form-group">
-            <label class="form-label" for="date-event">Date of event</label>
-            <h4>Date of event</h4>
-            <input type="date" class="form-control" id="date-event" name="date-event" placeholder="Date of event" tabindex="6" required>
+          <div class="number">
+            <div class="form-group">
+              <label class="form-label" for="date-event">Date of event</label>
+              <h4>Date of event</h4>
+              <input type="date" class="form-control" id="date-event" name="date-event" placeholder="Date of event" tabindex="6" required>
+            </div>
+            <div class="form-group">
+              <label class="form-label" for="time-event">Time of event</label>
+              <h4>Time of event</h4>
+              <input type="time" class="form-control" id="time" name="time-event" placeholder="Time of event" tabindex="7" required>
+            </div>
           </div>
-          <div class="form-group">
-            <label class="form-label" for="time-event">Time of event</label>
-            <h4>Time of event</h4>
-            <input type="time" class="form-control" id="time" name="time-event" placeholder="Time of event" tabindex="7" required>
-          </div>
-          </div>
-          <div class="form-group">
+          <div class="form-group_number">
             <label class="form-label" for="attendees">Number of attendees</label>
             <input type="number" class="form-control" id="attendees" name="attendees" placeholder="Number of attendees" tabindex="8" required>
           </div>
-      <div class="checkbox">
-        <h4>Catering</h4>
-          <div class="form-group">
-            <label class="form-label" for="text">Breakfast</label>
-            <input type="checkbox" class="form-control" id="checkbox" name="breakfast" placeholder="Breakfast" tabindex="9" required> <span>Breakfast</span>
+
+          <div class="checkbox">
+            <h4>Catering</h4>
+            <div class="contain">
+              <div class="form-group">
+                <input type="checkbox" class="form-control" id="checkbox" name="breakfast" placeholder="Breakfast" tabindex="9" required> <span>Breakfast</span> <span class="checkmark"></span>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" class="form-control" id="checkbox" name="lunch" placeholder="Lunch" tabindex="10" required> <span>Lunch</span> <span class="checkmark"></span>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" class="form-control" id="checkbox" name="dinner" placeholder="Dinner" tabindex="11" required> <span>Dinner</span> <span class="checkmark"></span>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" class="form-control" id="checkbox" name="reception" placeholder="Reception" tabindex="12" required> <span>Reception</span> <span class="checkmark"></span>
+              </div>
+            </div>
           </div>
           <div class="form-group">
-            <label class="form-label" for="lunch">Lunch</label>
-            <input type="checkbox" class="form-control" id="checkbox" name="lunch" placeholder="Lunch" tabindex="10" required> <span>Lunch</span>
-          </div>
-          <div class="form-group">
-            <label class="form-label" for="dinner">Dinner</label>
-            <input type="checkbox" class="form-control" id="checkbox" name="dinner" placeholder="Dinner" tabindex="11" required> <span>Dinner</span>
-          </div>
-          <div class="form-group">
-            <label class="form-label" for="reception">Reception</label>
-            <input type="checkbox" class="form-control" id="checkbox" name="reception" placeholder="Dinner" tabindex="12" required> <span>Reception</span>
-          </div>
-          </div>
-          <div class="form-group">
-            <label class="form-label" for="message">Message</label>
-            <textarea  name="message" class="form-control" id="message" placeholder="Message..." tabindex="13" required></textarea>
+
+            <h4>Message</h4>
+            <div class="msg">
+              <textarea name="message" class="form-control" id="message" placeholder="..." tabindex="13" required></textarea>
+            </div>
           </div>
           <div class="text-center">
-            <button type="submit" class="btn btn-start-order">Send Message</button>
+            <button type="submit" class="btn btn-start-order">Send</button>
           </div>
         </form>
       </div>
-
+<!--
       <div class="right">
         <div class="imgcontainer">
-          <img src="" alt="">
+          <img src="images/test_form.jpg" alt=""> -->
         </div>
       </div>
     </div>
